--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 matplotlib==2.1.0
-tensorflow==1.15
+numpy
 inflect==0.2.5
-librosa==0.6.0
+librosa==0.7.0
 scipy==1.0.0
 tensorboardX==1.1
 Unidecode==1.0.22
